--- a/Flask_app/templates/index.html
+++ b/Flask_app/templates/index.html
@@ -35,6 +35,27 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
+    <!-- container for nav bar for the website: Home, about -->
+    <nav class="navbar">
+        <ul>
+            <li><a href="{{ url_for('index') }}">Home</a></li>
+            <li><a href="{{ url_for('about') }}">About</a></li>
+        </ul>
+    </nav>
+
+    <!-- <nav class="navbar narbar-expand">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('index') }}"> Home </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('about') }}"> About </a>
+                </li>
+            </ul>
+        </div>
+    </nav> -->
+
     <!-- container for the whole form. And the submit button will be at the end of the form -->
     <div class="container">
         <h1> Project Catalogue </h1>
