--- a/Flask_app/static/css/main.css
+++ b/Flask_app/static/css/main.css
@@ -1,10 +1,46 @@
 /* Center the entire container */
+:root {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+  
+    color-scheme: light dark;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #242424;
+  
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+}
+a {
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
+}
+a:hover {
+    color: #535bf2;
+}
 .container {
     display: flex;
+    margin: 0;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 50vh; /* Full viewport height */
+    height: 50vh; /*Full viewport height*/ 
+}
+h1 {
+    font-size: 3.2em;
+    line-height: 1.1;
+    height: 10vh;
+    margin: 0;
+}
+.logo {
+    height: 6em;
+    padding: 1.5em;
+    will-change: filter;
+    transition: filter 300ms;
 }
 
 /* Optional: Style the forms for better visual separation */
