--- a/Flask_app/templates/index.html
+++ b/Flask_app/templates/index.html
@@ -1,32 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>University Project Catalogue</title>
-</head>
-<body>
-    <h1>University Project Catalogue</h1>
-    <form action="{{ url_for('search') }}" method="post">
-        <input type="text" name="query" placeholder="Search for a project...">
-        <button type="submit">Search</button>
-    </form>
-    <form action="{{ url_for('filter') }}" method="post">
-        <select name="level">
-            <option value="">Select Level</option>
-            <option value="Bachelor">Bachelor</option>
-            <option value="Master">Master</option>
-        </select>
-        <button type="submit">Filter</button>
-    </form>
-    <ul>
-        {% for project in projects %}
-            <li>{{ project.title }} - {{ project.level }}</li>
-        {% endfor %}
-    </ul>
-</body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,19 +13,6 @@
             <li><a href="{{ url_for('about') }}">About</a></li>
         </ul>
     </nav>
-
-    <!-- <nav class="navbar narbar-expand">
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('index') }}"> Home </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('about') }}"> About </a>
-                </li>
-            </ul>
-        </div>
-    </nav> -->
 
     <!-- container for the whole form. And the submit button will be at the end of the form -->
     <div class="container">
@@ -94,12 +52,15 @@
             </select>
             <button type="submit">Filter</button>
         </form>
+
+        <div class="list">
+            <ul>
+                {% for project in projects %}
+                    <li> <a href="{{url_for('project', project_id=loop.index)}}" ></a>{{ project.title }} - {{project.author}} - {{ project.level }} - {{ project.date }} - {{ project.university }}</li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
-    <div class="list">
-        <ul>
-            {% for project in projects %}
-                <li>{{ project.title }} - {{project.author}} - {{ project.level }} - {{ project.date }} - {{ project.university }}</li>
-            {% endfor %}
-        </ul>
+    
 </body>
 </html>
