--- a/Flask_app/static/css/main.css
+++ b/Flask_app/static/css/main.css
@@ -14,14 +14,14 @@
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
 }
-a {
+/* a {
     font-weight: 500;
     color: #646cff;
     text-decoration: inherit;
 }
 a:hover {
     color: #535bf2;
-}
+} */
 .container {
     display: flex;
     margin: 0;
@@ -29,6 +29,8 @@ a:hover {
     align-items: center;
     justify-content: center;
     height: 50vh; /*Full viewport height*/ 
+    overflow-y: scroll;
+    box-sizing: border-box;
 }
 h1 {
     font-size: 3.2em;
@@ -51,9 +53,10 @@ form {
 /* Styling for the navigation bar */
 .navbar {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     background-color: #333;
     padding: 10px;
+    padding-left: 860px;
     position: fixed;
     width: 100%;
     top: 0;
@@ -70,6 +73,7 @@ form {
 /* Styling for each navigation link */
 .navbar li {
     margin-left: 10px;
+    /* padding-right: 10px; */
 }
 
 .navbar a {
@@ -94,6 +98,22 @@ body {
     padding-top: 50px; /* Space for fixed navbar */
 }
 
+.cont_about {
+    flex: 1;
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow-y: auto;
+}
+.content {
+    width: 100%;
+    height: auto;
+    line-height: 10px;
+    /* background: linear-gradient(to bottom, #fff, #ccc); */
+}
+.spacer {
+    margin-bottom: 100px;
+}
 
 /* Styling for the form elements for consistency */
 form input, form select, form button {
