--- a/Flask_app/templates/index.html
+++ b/Flask_app/templates/index.html
@@ -33,6 +33,7 @@
     <meta charset="UTF-8">
     <title>University Project Catalogue</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <!-- container for nav bar for the website: Home, about -->
