--- a/Flask_app/static/css/main.css
+++ b/Flask_app/static/css/main.css
@@ -105,3 +105,27 @@ form input, form select, form button {
     padding: 10px;
     margin: 5px;
 }
+
+
+.list {
+    max-height: 400px; /* Adjust this value based on your preference */
+    overflow-y: auto; /* Enables vertical scrolling */
+    padding-right: 15px; /* Optional: Adds some space on the right side of the list */
+}
+
+/* Optional: Smoothens the scrollbar */
+.list::-webkit-scrollbar {
+    width: 10px;
+}
+
+.list::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Color of the tracking area */
+}
+
+.list::-webkit-scrollbar-thumb {
+    background: #888; /* Color of the scroll thumb */
+}
+
+.list::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Color of the scroll thumb on hover */
+}
