--- a/Flask_app/templates/index.html
+++ b/Flask_app/templates/index.html
@@ -22,33 +22,33 @@
         <!-- form for searching projects -->
         <form action="{{ url_for('search') }}" method="post">
             <input type="text" name="query" placeholder="Search for a project...">
-            <button type="submit">Search</button>
-        </form>
+            <!-- <button type="submit">Search</button> -->
+        <!-- </form> -->
         <!-- filters a user can apply to find the right projects. Going by publishing year, degree level, and university -->
-        <form action="{{ url_for('filter') }}" method="post">
+        <!-- <form action="{{ url_for('filter') }}" method="post"> -->
             <select name="level">
                 <option value="">Select Level</option>
-                <option value="Bachelor">Bachelor</option>
-                <option value="Master">Master</option>
+                <option value="Bachelor">BSc</option>
+                <option value="Master">Msc</option>
             </select>
-            <button type="submit">Filter</button>
-        </form>
+            <!-- <button type="submit">Filter</button> -->
+        <!-- </form> -->
         <!-- filter by year -->
-        <form action="{{ url_for('filter') }}" method="post">
+        <!-- <form action="{{ url_for('filter') }}" method="post"> -->
             <select name="year">
                 <option value="">Select Year</option>
                 <option value="2020">2020</option>
                 <option value="2021">2021</option>
             </select>
-            <button type="submit">Filter</button>
-        </form>
+            <!-- <button type="submit">Filter</button> -->
+        <!-- </form> -->
         <!-- filter by university -->
-        <form action="{{ url_for('filter') }}" method="post">
+        <!-- <form action="{{ url_for('filter') }}" method="post"> -->
             <select name="university">
                 <option value="">Select University</option>
                 <option value="University of Copenhagen">University of Copenhagen</option>
             </select>
-            <button type="submit">Filter</button>
+            <button type="submit">Search</button>
         </form>
 
         <!-- <div class="list">
