--- a/Flask_app/templates/index.html
+++ b/Flask_app/templates/index.html
@@ -11,6 +11,7 @@
     <nav class="navbar">
         <ul>
             <li><a href="{{ url_for('index') }}">Home</a></li>
+            <li><a href="{{ url_for('addProject') }}">Add Project</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
         </ul>
     </nav>
