--- a/Flask_app/static/css/main.css
+++ b/Flask_app/static/css/main.css
@@ -29,8 +29,9 @@ a:hover {
     align-items: center;
     justify-content: center;
     height: auto; /*Full viewport height*/ 
+    min-height: 100vh;
 
-    max-height: calc(100vh - 60px); /* Adjust the 60px based on the height of your navbar */
+    /* max-height: calc(550vh - 10px); Adjust the 60px based on the height of your navbar */
     overflow-y: auto;
 
     box-sizing: border-box;
@@ -98,7 +99,7 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     padding-top: 50px; /* Space for fixed navbar */
-    overflow: hidden;
+    overflow: auto;
 }
 
 .cont_about {
@@ -128,7 +129,7 @@ form input, form select, form button {
 .list {
      /* Adjust this value based on your preference */
      /* Enables vertical scrolling */
-    max-height: 550px;
+    max-height: auto;
     padding-right: 15px; /* Optional: Adds some space on the right side of the list */
 }
 
