--- a/Flask_app/templates/addProject.html
+++ b/Flask_app/templates/addProject.html
@@ -42,6 +42,7 @@
                     <input id="pdf" type="file" />
                 </label>
             </fieldset>
+            <input type="submit" value="Send request">
         </form>
     </div>
     <!-- <div class="popup" onclick="myFunction()">Click me!
