added university option

--- a/Flask_app/templates/addProject.html
+++ b/Flask_app/templates/addProject.html
@@ -38,7 +38,12 @@
                         <option value="MSc">Master</option>
                     </select>
                 </label>
-                <label for="pdf">
+                <label>Enter university:
+                    <select>
+                        <option value="BSc">University of Copenhagen</option>
+                    </select>
+                </label>
+                <label for="pdf"> Upload pdf:
                     <input id="pdf" type="file" />
                 </label>
             </fieldset>
