added supervisors visibility
Co-Authored-By: NikoUSoren <126587840+NikoUSoren@users.noreply.github.com>
Co-Authored-By: Anton Bressendorff <126203682+AntonBressendorff@users.noreply.github.com>

--- a/Flask_app/templates/projectPage.html
+++ b/Flask_app/templates/projectPage.html
@@ -57,7 +57,7 @@
             {% endfor %}
         </ul>
         <p><b>Level</b>: {{project.degree}}</p>
-        <p><b>Main supervisor</b>:</p>
+        <p><b>Main supervisor</b>: {{project.supervisor}}</p>
         <hr>
         <h2>Project attachments</h2>
         <ul>
