--- a/Flask_app/templates/addProject.html
+++ b/Flask_app/templates/addProject.html
@@ -32,7 +32,7 @@
                 <label for="year">Enter year:
                     <input id="year" type="number" min="1900" max="2024" required />
                 </label>
-                <label>Enter level:
+                <label>Enter degree:
                     <select>
                         <option value="BSc" selected>Bachelor</option>
                         <option value="MSc">Master</option>
