fixed utf8 encoding

--- a/Flask_app/templates/about.html
+++ b/Flask_app/templates/about.html
@@ -22,7 +22,7 @@
         <div class="content">
             <!-- Lengthy content goes here -->
             <p>This Catalogue was developed as part of the Databases and Information-Systems course 2024 at the University of Copenhagen. </p>
-            <p>It is a simple web application that allows users to search and filter through a list of projects. The projects are stored in a postgresql database and are displayed on the website using Flask.</p> 
+            <p>It is a simple web application that allows users to search and filter Ø through a list of projects. The projects are stored in a postgresql database and are displayed on the website using Flask.</p> 
             <p>Users can search for a project by typing in the search bar and clicking the search button. They can also filter the projects by selecting a level from the dropdown menu and clicking the filter button.</p>
             <p class="spacer"></p>
             <p><b>Developers:</b></p>
