--- a/Flask_app/static/css/main.css
+++ b/Flask_app/static/css/main.css
@@ -1,7 +1,9 @@
 /* Center the entire container */
+@charset "UTF-8";
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
+
     font-weight: 400;
   
     color-scheme: light dark;
