--- a/Flask_app/templates/addProject.html
+++ b/Flask_app/templates/addProject.html
@@ -18,7 +18,7 @@
     <!-- addProject page container -->
     <div>
         <h1>Submission form for new projects</h1>
-        <form method="post" action="{{ url_for('search') }}">
+        <form method="post" action="{{ url_for('addProject') }}">
             <fieldset>
                 <label for="title">Enter project title:
                     <input value="title" id="title" type="text" required />
