--- a/Flask_app/templates/about.html
+++ b/Flask_app/templates/about.html
@@ -22,12 +22,12 @@
         <div class="content">
             <!-- Lengthy content goes here -->
             <p>This Catalogue was developed as part of the Databases and Information-Systems course 2024 at the University of Copenhagen. </p>
-            <p>It is a simple web application that allows users to search and filter through a list of projects. The projects are stored in a postgresql database and are displayed on the website using Flask.</p> 
+            <p>It is a simple web application that allows users to search and filter through a list of Bachelor/Masters theses. The projects are stored in a postgresql database and are displayed on the website using Flask.</p> 
             <p>Users can search for a project by typing in the search bar and clicking the search button. They can also filter the projects by selecting a level from the dropdown menu and clicking the filter button.</p>
             <p class="spacer"></p>
             <p><b>Developers:</b></p>
-            <p>Atta Samiullah - kuidhere</p>
-            <p>Nikolaj Sørensen - kuidhere</p>
+            <p>Atta Samiullah - rwq249@alumni.ku.dk</p>
+            <p>Nikolaj Sørensen - rtg634@alumni.ku.dk</p>
             <p>Anton Bressendorff - tdk223@alumni.ku.dk</p>
             
         </div>
