--- a/Flask_app/templates/index.html
+++ b/Flask_app/templates/index.html
@@ -30,12 +30,9 @@
             </select>
             <select name="year">
                 <option value="">Select Year</option>
-                <option value="2020">2020</option>
-                <option value="2021">2021</option>
-                <option value="2022">2022</option>
-                <option value="2023">2023</option>
-                <option value="2024">2024</option>
-                <option value="2025">2025</option>
+                {% for year in years %}
+                    <option value="{{ year }}">{{ year }}</option>
+                {% endfor %}
             </select>
             <select name="university">
                 <option value="">Select University</option>
